--- a/templates/Admin.html
+++ b/templates/Admin.html
@@ -5,6 +5,12 @@
     <title>Admin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <style>
+        h2{
+            margin-left: 390px;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h2>Admin Page</h2>
@@ -25,16 +31,18 @@
         </tr>
       </thead>
       <tbody>
+        {% for tuple in userdata %}
         <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
+          <th scope="row">{{ loop.index }}</th>
+          <td>{{ tuple[2] }}</td>
+          <td>{{ tuple[3] }}</td>
+          <td>{{ tuple[1] }}</td>
             <td>
-                <button type="button" class="btn btn-success btn-sm">Edit</button>
-                <button type="button" class="btn btn-danger btn-sm">Delete</button>
+                <button type="button" onclick="window.location.href = '/edituser?id={{ tuple[0] }}'" class="btn btn-success btn-sm">Edit</button>
+                <button type="button" onclick="window.location.href = '/deleteuser?id={{ tuple[0] }}'" class="btn btn-danger btn-sm">Delete</button>
             </td>
         </tr>
+        {% endfor %}
       </tbody>
     </table>
 </body>
