--- a/templates/Index.html
+++ b/templates/Index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h2>Welcome User <span id="username">{{ username }}</span></h2>
+    <h2>Welcome User <span style="color:orange" id="username">{{ username }}</span></h2>
 
     <div class="maincontent">
         <div class="mb-3">
