added new adduser file

--- a/templates/Admin.html
+++ b/templates/Admin.html
@@ -16,7 +16,7 @@
     <h2>Admin Page</h2>
     <br><br>
 
-    <button type="button" class="btn btn-primary btn-sm">Add new user</button>
+    <button type="button" onclick="window.location.href='getadduser'" class="btn btn-primary btn-sm">Add new user</button>
     <br><br>
 
     <table class="table table-sm">
